--- a/spring-boot-example/src/main/resources/application.yml
+++ b/spring-boot-example/src/main/resources/application.yml
@@ -3,5 +3,17 @@ server:
   port: 8080
 
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:54d32/customer
+    username: quancode
+    password: 521800
+  jpa:
+    hibernate:
+        ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
   main:
     web-application-type: servlet
